--- a/re_ids.html
+++ b/re_ids.html
@@ -85,6 +85,7 @@ function load_()
 <body onload="load_()">
 <h1 align="center">Reassembly IDS Table</h1>
 <p align="center">By Magnus siiftun1857 Frankline</p>
+<p align="center"><a href="https://github.com/siiftun1857/reassembly-upload-dropbox">Add your ids here</a></p>
 <!--<p align="center"><button onclick="load_()">Reload</button></p>-->
 <table align="center" bolder="2" class="MsoTableGrid" style="border: currentColor; border-image: none; border-collapse: collapse;" border="1" cellspacing="0" cellpadding="0">
 <tbody id="T1">
