--- a/re_ids.html
+++ b/re_ids.html
@@ -61,8 +61,10 @@ function formatting_line(text)
 	
 	if(!checkNumber(words[0]))
 		return '';
-		
-	var output='<tr><td>'+words[0]+'</td><td bgcolor="'+words[1]+'">'+words[1]+'</td><td>'+words[2]+'</td><td>'+words[3]+'</td><td>'+words[4]+'</td><td>'+words[5]+'</td><td>'+words[6]+'</td><td>'+words[7]+'</td><td>'+words[8]+'</td><td><a href="http://steamcommunity.com/sharedfiles/filedetails/?id='+words[9]+'">'+words[9]+'</td></tr>';
+	var colortextcolor='000000';
+	if(parseInt('0x'+words[1]) <= 0x7FFFFF)
+		colortextcolor='ffffff';
+	var output='<tr><td>'+words[0]+'</td><td bgcolor="'+words[1]+'"><font color="#'+colortextcolor+'">'+words[1]+'</font></td><td>'+words[2]+'</td><td>'+words[3]+'</td><td>'+words[4]+'</td><td>'+words[5]+'</td><td>'+words[6]+'</td><td>'+words[7]+'</td><td>'+words[8]+'</td><td><a href="http://steamcommunity.com/sharedfiles/filedetails/?id='+words[9]+'">'+words[9]+'</td></tr>';
 	return output;
 }
 function formatting()
