--- a/re_ids.html
+++ b/re_ids.html
@@ -81,7 +81,7 @@ function load_()
 {
 	loadXMLDoc('https://raw.githubusercontent.com/siiftun1857/reassembly-upload-dropbox/master/IDS.txt');
 }
-//<tr><td><!--FactionID--></td><td bgcolor=""><!--FacColor--></td><td><!--Author--></td><td><!--Series--></td><td><!--FactionName--></td><td><!--BlockIDLeast--></td><td><!--BlockIDMost--></td><td><!--RegionIDLeast--></td><td><!--RegionIDMost--></td><td><!--WorkshipID--></td></tr>
+//<tr><td><!--FactionID--></td><td bgcolor=""><!--FacColor--></td><td><!--Author--></td><td><!--Series--></td><td><!--FactionName--></td><td><!--BlockIDLeast--></td><td><!--BlockIDMost--></td><td><!--RegionIDLeast--></td><td><!--RegionIDMost--></td><td><!--WorkshopID--></td></tr>
 </script>
 </head>
 <body onload="load_()">
@@ -101,7 +101,7 @@ function load_()
 <td><b>BlockIDMost</b></td>
 <td><b>RegionIDLeast</b></td>
 <td><b>RegionIDMost</b></td>
-<td><b>WorkshipID</b></td>
+<td><b>WorkshopID</b></td>
 </tr>
 </tbody>
 </table>
