--- a/re_ids.html
+++ b/re_ids.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>IDS Table</title>
+<title>Reassembly IDS Database</title>
 <script type="text/javascript">
 var xmlhttp;
 var textbank;
@@ -85,7 +85,7 @@ function load_()
 </script>
 </head>
 <body onload="load_()">
-<h1 align="center">Reassembly IDS Table</h1>
+<h1 align="center">Reassembly IDS Database</h1>
 <p align="center">By Magnus siiftun1857 Frankline</p>
 <p align="center"><a href="https://github.com/siiftun1857/reassembly-upload-dropbox">Add your ids here</a></p>
 <!--<p align="center"><button onclick="load_()">Reload</button></p>-->
