--- a/re_ids.html
+++ b/re_ids.html
@@ -102,6 +102,7 @@ function load_()
 <td><b>RegionIDLeast</b></td>
 <td><b>RegionIDMost</b></td>
 <td><b>WorkshopID</b></td>
+<td><b>GithubRepository</b></td>
 </tr>
 </tbody>
 </table>
