--- a/re_ids.html
+++ b/re_ids.html
@@ -58,6 +58,13 @@ function formatting_line(text)
 		return '';
 	var words=new Array(20);
 	words=text.split("|");
+	for(var i=0;i<20;i++)
+	{
+		if(words[i]===undefined)
+		{
+			words[i]='';
+		}
+	}
 	
 	if(!checkNumber(words[0]))
 		return '';
