--- a/re_ids.html
+++ b/re_ids.html
@@ -6,6 +6,23 @@
 <script type="text/javascript">
 var xmlhttp;
 var textbank;
+
+function quickSort(arr,sortby) {
+    if (arr.length <= 1) { return arr; }
+    var pivotIndex = Math.floor(arr.length / 2)
+    var pivot = arr.splice(pivotIndex, 1)[0];
+    var left = [];
+    var right = [];
+    for (var i = 0; i < arr.length; i++){
+        if (arr[i].split("|")[sortby] < pivot.split("|")[sortby]) {
+            left.push(arr[i]);
+        } else {
+            right.push(arr[i]);
+        }
+    }
+    return quickSort(left,sortby).concat([pivot], quickSort(right,sortby));
+};
+
 function loadXMLDoc(url)
 {
 xmlhttp=null;
@@ -37,7 +54,7 @@ if (xmlhttp.readyState==4)
     {// 200 = "OK"
 //    document.getElementById('T1').innerHTML=xmlhttp.responseText;
     textbank=xmlhttp.responseText;
-	formatting();
+	formatting(-1);
     }
   else
     {
@@ -52,6 +69,7 @@ function checkNumber(theObj) {
   }
   return false;
 }
+
 function formatting_line(text)
 {
 	if(text[0]=='#')
@@ -74,19 +92,33 @@ function formatting_line(text)
 	var output='<tr><td>'+words[0]+'</td><td bgcolor="'+words[1]+'"><font color="#'+colortextcolor+'">'+words[1]+'</font></td><td>'+words[2]+'</td><td>'+words[3]+'</td><td>'+words[4]+'</td><td>'+words[5]+'</td><td>'+words[6]+'</td><td>'+words[7]+'</td><td>'+words[8]+'</td><td><a href="http://steamcommunity.com/sharedfiles/filedetails/?id='+words[9]+'">'+words[9]+'</td><td><a href="https://github.com/'+words[10]+'">'+words[10]+'</td></tr>';
 	return output;
 }
-function formatting()
+function formatting(sortby)
 {
 	var linescount=textbank.length-textbank.replace(/\n/g,'').length;
 	var lines=textbank.split("\n");
+	var sortedlines;
+	if(sortby==-1)
+	{
+		sortedlines=lines;
+	}
+	else
+	{
+		sortedlines=quickSort(lines,sortby);
+	}
 	//alert(linescount);
 	for(var i=0;i<linescount;i++)
 	{
-		document.getElementById('T1').innerHTML+=formatting_line(lines[i]);
+		document.getElementById('T1').innerHTML+=formatting_line(sortedlines[i]);
 	}
 }
 function load_()
 {
 	loadXMLDoc('https://raw.githubusercontent.com/siiftun1857/reassembly-upload-dropbox/master/IDS.txt');
+}
+function reformatting(sortby)
+{
+	document.getElementById('T1').innerHTML='<tr align="center"><td><a href="javascript:reformatting(0);"><b>FactionID</b></a></td><td><a href="javascript:reformatting(1);"><b>FacColor</b></a></td><td><a href="javascript:reformatting(2);"><b>Author</b></a></td><td><a href="javascript:reformatting(3);"><b>Series</b></a></td><td><a href="javascript:reformatting(4);"><b>FactionName</b></a></td><td><a href="javascript:reformatting(5);"><b>BlockIDLeast</b></a></td><td><a href="javascript:reformatting(6);"><b>BlockIDMost</b></a></td><td><a href="javascript:reformatting(7);"><b>RegionIDLeast</b></a></td><td><a href="javascript:reformatting(8);"><b>RegionIDMost</b></a></td><td><a href="javascript:reformatting(9);"><b>WorkshopID</b></a></td><td><a href="javascript:reformatting(10);"><b>GithubRepository</b></a></td></tr>';
+	formatting(sortby);
 }
 //<tr><td><!--FactionID--></td><td bgcolor=""><!--FacColor--></td><td><!--Author--></td><td><!--Series--></td><td><!--FactionName--></td><td><!--BlockIDLeast--></td><td><!--BlockIDMost--></td><td><!--RegionIDLeast--></td><td><!--RegionIDMost--></td><td><!--WorkshopID--></td></tr>
 </script>
@@ -94,22 +126,23 @@ function load_()
 <body onload="load_()">
 <h1 align="center">Reassembly IDS Database</h1>
 <p align="center">By Magnus siiftun1857 Frankline</p>
+<noscript><p align="center">///JAVASCRIPT IS REQUIRED///</p></noscript>
 <p align="center"><a href="https://github.com/siiftun1857/reassembly-upload-dropbox">Add your ids here</a></p>
 <!--<p align="center"><button onclick="load_()">Reload</button></p>-->
 <table align="center" bolder="2" class="MsoTableGrid" style="border: currentColor; border-image: none; border-collapse: collapse;" border="1" cellspacing="0" cellpadding="0">
 <tbody id="T1">
 <tr align="center">
-<td><b>FactionID</b></td>
-<td><b>FacColor</b></td>
-<td><b>Author</b></td>
-<td><b>Series</b></td>
-<td><b>FactionName</b></td>
-<td><b>BlockIDLeast</b></td>
-<td><b>BlockIDMost</b></td>
-<td><b>RegionIDLeast</b></td>
-<td><b>RegionIDMost</b></td>
-<td><b>WorkshopID</b></td>
-<td><b>GithubRepository</b></td>
+<td><a href="javascript:reformatting(0);"><b>FactionID</b></a></td>
+<td><a href="javascript:reformatting(1);"><b>FacColor</b></a></td>
+<td><a href="javascript:reformatting(2);"><b>Author</b></a></td>
+<td><a href="javascript:reformatting(3);"><b>Series</b></a></td>
+<td><a href="javascript:reformatting(4);"><b>FactionName</b></a></td>
+<td><a href="javascript:reformatting(5);"><b>BlockIDLeast</b></a></td>
+<td><a href="javascript:reformatting(6);"><b>BlockIDMost</b></a></td>
+<td><a href="javascript:reformatting(7);"><b>RegionIDLeast</b></a></td>
+<td><a href="javascript:reformatting(8);"><b>RegionIDMost</b></a></td>
+<td><a href="javascript:reformatting(9);"><b>WorkshopID</b></a></td>
+<td><a href="javascript:reformatting(10);"><b>GithubRepository</b></a></td>
 </tr>
 </tbody>
 </table>
