--- a/re_ids.html
+++ b/re_ids.html
@@ -73,7 +73,7 @@ if (xmlhttp.readyState==4)
     {// 200 = "OK"
 //    document.getElementById('T1').innerHTML=xmlhttp.responseText;
     textbank=xmlhttp.responseText;
-	formatting(-1);
+	reformatting(-1);
     }
   else
     {
@@ -140,7 +140,7 @@ function reformatting(sortby)
 <p align="center">By Magnus siiftun1857 Frankline</p>
 <noscript><p align="center">///JAVASCRIPT IS REQUIRED///</p></noscript>
 <p align="center"><a href="https://github.com/siiftun1857/reassembly-upload-dropbox">Add your ids here</a></p>
-<!--<p align="center"><button onclick="load_()">Reload</button></p>-->
+<p align="center"><button onclick="load_()">Reload</button></p>
 <table align="center" bolder="2" class="MsoTableGrid" style="border: currentColor; border-image: none; border-collapse: collapse;" border="1" cellspacing="0" cellpadding="0">
 <tbody id="T1">
 <tr align="center">
