--- a/re_ids.html
+++ b/re_ids.html
@@ -146,7 +146,8 @@ function reformatting(sortby)
 <h1 align="center">Reassembly IDS Database</h1>
 <p align="center">By Magnus siiftun1857 Frankline</p>
 <noscript><p align="center">///JAVASCRIPT IS REQUIRED///</p></noscript>
-<p align="center"><a href="https://github.com/siiftun1857/reassembly-upload-dropbox">Add your ids here</a></p>
+<p align="center"><a href="https://github.com/siiftun1857/reassembly-upload-dropbox">[About this project]</a></p>
+<p align="center"><a href="https://github.com/siiftun1857/reassembly-upload-dropbox/edit/master/IDS.txt">[Edit this database]</a></p>
 <p align="center"><button onclick="load_()">Reload</button></p>
 <table align="center" bolder="2" class="MsoTableGrid" style="border: currentColor; border-image: none; border-collapse: collapse;" border="1" cellspacing="0" cellpadding="0">
 <tbody id="T1">
