--- a/re_ids.html
+++ b/re_ids.html
@@ -105,6 +105,8 @@ function formatting_line(text)
 	
 	if(!checkNumber(words[0]))
 		return '';
+	if(praseInt(words[0])==0)
+		words[0]='';
 	var colortextcolor='000000';
 	if(parseInt('0x'+words[1][0]+words[1][1])*299+parseInt('0x'+words[1][2]+words[1][3])*587+parseInt('0x'+words[1][4]+words[1][5])*114 < 127000)
 		colortextcolor='ffffff';
