--- a/re_ids.html
+++ b/re_ids.html
@@ -169,5 +169,7 @@ function reformatting(sortby)
 </tbody>
 </table>
 <img align="center" src="https://i.loli.net/2019/10/24/P5f2XBv4G3RhUkj.jpg" >
+<p align="center"><font color="#7f7f7f">"Untitled Magnuassembly Artwork 20191013" by Abrel</font></p>
+<p align="center"><font color="#7f7f7f">From left to right: Lapism. R. Knight, S.B. E. Lapis</font></p>
 </body>
 </html>
