--- a/re_ids.html
+++ b/re_ids.html
@@ -113,7 +113,7 @@ function formatting_line(text)
 	var colortextcolor='000000';
 	if(parseInt('0x'+words[1][0]+words[1][1])*299+parseInt('0x'+words[1][2]+words[1][3])*587+parseInt('0x'+words[1][4]+words[1][5])*114 < 127000)
 		colortextcolor='ffffff';
-	var output='<tr><td class="tar">'+words[0]+'</td><td bgcolor="'+words[1]+'"><font color="#'+colortextcolor+'">'+words[1]+'</font></td><td>'+words[2]+'</td><td>'+words[3]+'</td><td>'+words[4]+'</td><td class="tar">'+words[5]+'</td><td<td class="tar">'+words[6]+'</td><td class="tar">'+words[7]+'</td><td class="tar">'+words[8]+'</td><td class="tar"><a href="http://steamcommunity.com/sharedfiles/filedetails/?id='+words[9]+'">'+words[9]+'</td><td><a href="https://github.com/'+words[10]+'">'+words[10]+'</td></tr>';
+	var output='<tr><td class="tar">'+words[0]+'</td><td bgcolor="'+words[1]+'"><font color="#'+colortextcolor+'">'+words[1]+'</font></td><td>'+words[2]+'</td><td>'+words[3]+'</td><td>'+words[4]+'</td><td class="tar">'+words[5]+'</td><td class="tar">'+words[6]+'</td><td class="tar">'+words[7]+'</td><td class="tar">'+words[8]+'</td><td class="tar"><a href="http://steamcommunity.com/sharedfiles/filedetails/?id='+words[9]+'">'+words[9]+'</td><td><a href="https://github.com/'+words[10]+'">'+words[10]+'</td></tr>';
 	return output;
 }
 function formatting(sortby)
